feat: Add 365 Client Portal foundation
## Database
- Clean schema with 10 tables (70% reduction from Oracle Method)
- RLS policies for client isolation
- LLM usage tracking

## Monorepo Structure
- apps/client-portal - Client-facing portal
- apps/platform - Team-facing Torsor
- packages/shared - Types, constants, assessment questions
- packages/llm - LLM prompts and model routing
- packages/ui - Shared components

## Client Portal
- Magic link authentication
- Dashboard with progress tracking
- Part 1 assessment (15 questions) with conversational flow
- Part 2/3 page placeholders
- Responsive layout with mobile support

## Edge Functions
- fit-assessment (Haiku)
- generate-roadmap (Sonnet)
- generate-value-analysis (Sonnet)
- chat-completion (Haiku/Sonnet with auto-routing)

## Assessment Questions
- Part 1: 15 Life Design questions
- Part 2: 72 Business Deep Dive questions
- Part 3: 32 Hidden Value Audit questions

Ready for Railway deployment

--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
-  "name": "torsor-v2",
+  "name": "torsor",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "engines": {
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.84.0",
-    "@tanstack/react-query": "^5.90.10",
-    "@tanstack/react-router": "^1.139.3",
-    "lucide-react": "^0.554.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "dev": "npm run dev --workspace=apps/platform",
+    "dev:client": "npm run dev --workspace=apps/client-portal",
+    "dev:all": "npm run dev --workspaces --if-present",
+    "build": "npm run build --workspaces --if-present",
+    "build:platform": "npm run build --workspace=apps/platform",
+    "build:client": "npm run build --workspace=apps/client-portal",
+    "lint": "npm run lint --workspaces --if-present",
+    "typecheck": "npm run typecheck --workspaces --if-present",
+    "db:migrate": "supabase db push",
+    "db:types": "supabase gen types typescript --local > packages/shared/src/types/database.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.46.4"
   }
 }
