--- a/apps/client-portal/package.json
+++ b/apps/client-portal/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -35,4 +36,3 @@
     "vite": "^7.2.4"
   }
 }
-
