fix: Update Railway start command to use npm run start
- railway.json now uses 'npm run start' instead of preview with wrong flags
- start script uses PORT env var correctly with serve

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build": "npm run build --workspaces --if-present",
     "build:platform": "npm run build --workspace=apps/platform",
     "build:client": "npm run build --workspace=apps/client-portal",
-    "preview": "serve -c serve.json",
-    "start": "serve -c serve.json -l $PORT",
+    "preview": "serve -c serve.json -l 3001",
+    "start": "serve -c serve.json -l ${PORT:-3001}",
     "lint": "npm run lint --workspaces --if-present",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "db:migrate": "supabase db push",
