Configure two-deployment architecture: platform + client portal
- Update railway.json to build/serve original platform (from src/)
- Create railway-client.json for client portal service
- Update serve.json for platform (serves dist/)
- Create serve-client.json for client portal (serves apps/client-portal/dist/)
- Update package.json scripts for both deployments

--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "npm run dev --workspace=apps/platform",
+    "dev": "vite",
     "dev:client": "npm run dev --workspace=apps/client-portal",
     "dev:all": "npm run dev --workspaces --if-present",
-    "build": "npm run build --workspaces --if-present",
-    "build:platform": "npm run build --workspace=apps/platform",
+    "build": "tsc -b && vite build",
+    "build:platform": "tsc -b && vite build",
     "build:client": "npm run build --workspace=apps/client-portal",
-    "preview": "serve -c serve.json -l 3001",
+    "preview": "vite preview",
     "start": "serve -c serve.json -l ${PORT:-3001}",
-    "lint": "npm run lint --workspaces --if-present",
-    "typecheck": "npm run typecheck --workspaces --if-present",
+    "start:platform": "serve -c serve.json -l ${PORT:-3001}",
+    "start:client": "serve -c serve-client.json -l ${PORT:-3001}",
+    "lint": "eslint .",
+    "typecheck": "tsc -b",
     "db:migrate": "supabase db push",
     "db:types": "supabase gen types typescript --local > packages/shared/src/types/database.ts"
   },
