Fix TypeScript errors in Part2 and Part3 pages
- Update shared package exports to include data path
- Fix imports to use @torsor/shared main export
- Add explicit type annotations to all map callbacks
- Fix implicit any type errors

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,7 +9,9 @@
     ".": "./src/index.ts",
     "./types": "./src/types/index.ts",
     "./constants": "./src/constants/index.ts",
-    "./lib": "./src/lib/index.ts"
+    "./lib": "./src/lib/index.ts",
+    "./data": "./src/data/index.ts",
+    "./data/*": "./src/data/*.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
