Add accept-invitation function config and deployment instructions
- Add accept-invitation to supabase config.toml with verify_jwt=false (public endpoint)
- Create deployment instructions document
- Function needs to be deployed to fix 404 error when clicking invitation links

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -59,6 +59,9 @@ verify_jwt = true
 [functions."fit-assessment"]
 verify_jwt = true
 
+[functions."accept-invitation"]
+verify_jwt = false  # Public endpoint for invitation acceptance
+
 [analytics]
 enabled = false
 
