Implement roadmap review workflow and email notifications
- Add status field to client_roadmaps (pending_review, ready_for_client, published)
- Update assessment completion message to indicate roadmap will be reviewed
- Update roadmap page to show placeholder until roadmap is published
- Create notify-roadmap-ready Edge Function to send email when roadmap is ready
- Add 'Mark as Ready & Send Email' button in admin interface
- Update roadmap queries to filter by status (only show published/ready_for_client to clients)
- Set new roadmaps to 'pending_review' status by default
- Update TypeScript interfaces to include roadmap status field

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -48,6 +48,9 @@ enabled = false
 [functions]
 # Edge Functions configuration
 [functions."generate-roadmap"]
+
+[functions."notify-roadmap-ready"]
+verify_jwt = false
 verify_jwt = true
 
 [functions."generate-value-analysis"]
