Restore Claude Opus 4.5 with job tracking for async report generation
- Restore Claude Opus 4.5 model for premium quality
- Add job tracking to database for progress monitoring
- Add report_jobs migration for async-friendly architecture
- Add start-discovery-report function for future async support
- Increase max_tokens back to 16384 for comprehensive reports

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -51,6 +51,9 @@ enabled = false
 [functions."generate-discovery-report"]
 verify_jwt = true
 
+[functions."DISCOVERY-REPORT-GENERATOR"]
+verify_jwt = true
+
 [functions."detect-assessment-patterns"]
 verify_jwt = true
 
