Add Stage 2 Advisory Deep Dive function and integrate into discovery pipeline
- Add advisory-deep-dive edge function for service matching and insights
- Add service metadata schema migration with triggers, contraindications, and overselling rules
- Integrate Stage 2 into ClientServicesPage between Stage 1 and Stage 3
- Update generate-discovery-analysis to accept and use advisory insights
- Add comprehensive error handling and logging for Stage 2
- Add DISCOVERY_ASSESSMENT_OVERVIEW.md documentation
- Update supabase config.toml with advisory-deep-dive function settings

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -81,6 +81,9 @@ verify_jwt = true
 [functions."process-documents"]
 verify_jwt = true
 
+[functions."advisory-deep-dive"]
+verify_jwt = true
+
 [analytics]
 enabled = false
 
