--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "canvas": "^3.2.1",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
+    "qpdf": "^0.1.0-prealpha.1",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4"
+    "typescript-eslint": "^8.46.4",
+    "unpdf": "^1.4.0"
   }
 }
