Use full BenchmarkingClientReport in client portal
- Added @torsor/platform alias to share components between apps
- Client portal now uses the same rich report component as admin view
- Includes value bridge, exit readiness, scenarios, metrics visualizations
- No more simplified shadow version

--- a/apps/client-portal/tsconfig.json
+++ b/apps/client-portal/tsconfig.json
@@ -16,7 +16,8 @@
       "@/*": ["./src/*"],
       "@torsor/shared": ["../../packages/shared/src"],
       "@torsor/llm": ["../../packages/llm/src"],
-      "@torsor/ui": ["../../packages/ui/src"]
+      "@torsor/ui": ["../../packages/ui/src"],
+      "@torsor/platform/*": ["../../src/*"]
     },
     "baseUrl": "."
   },
