Add PDF export functionality with full content expansion
- Added html2canvas and jspdf dependencies
- Created pdf-export.ts utility for high-quality PDF generation
- Added Download PDF button with loading state to BenchmarkingClientReport
- Added forceExpanded prop to NarrativeSection, ValueBridgeSection, ScenarioPlanningSection
- PDF mode expands all collapsible sections and shows all scenarios
- Hide toggle buttons in PDF mode for cleaner export

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "db:types": "supabase gen types typescript --local > packages/shared/src/types/database.ts"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "serve": "^14.2.4"
   },
   "devDependencies": {
